# musicchain

./: .gitignore  README.md  WHITEPAPER.md
.github/workflows/: bopwire_web.yml
bopwire/: ANNOUNCEMENT.md  ARCHITECTURE.md  CMakeLists.txt  README.md  SWARM_TRANSFER_V2.md  build_openssl_android.sh  build_openssl_android_win.sh  inspect_ndk.sh  phone_library_smoke.out  vcpkg.json
bopwire/assets/: bopwire-bootstrap.txt
bopwire/config/: mini-node.config.json
bopwire/docs/: BLOCKCHAIN_AND_NETWORK_INTERNALS.md
bopwire/include/: bopwire.h
bopwire/scripts/: _visible-linux-appimage.sh  _visible-linux-build.sh  _visible-linux-player-build.sh  build-mini-node-linux.sh  build-node-linux.sh  build-node-windows.ps1  install-deps-arch.sh  install-deps-debian.sh  wipe-and-run-home.ps1
bopwire/src/api/: jsonrpc_server.cpp  jsonrpc_server.h  rats_api.cpp  rats_api.h  routes.cpp  routes.h
bopwire/src/audio/: fingerprint.cpp  fingerprint.h  ogg_decoder.cpp  ogg_decoder.h  ogg_validator.cpp  ogg_validator.h
bopwire/src/capi/: capi.cpp
bopwire/src/consensus/: candidate.h  slashing.h
bopwire/src/core/: block.cpp  block.h  merkle.cpp  merkle.h  transaction.h
bopwire/src/crypto/: bip39.cpp  bip39_wordlist_en.cpp  hash.h  keccak256.cpp  keccak256.h  keccak256_c.c  keccak256_c.h  keys.cpp  keys.h  signature.h  wally_bip39.cpp
bopwire/src/net/: load_monitor.cpp  relay_credit_tracker.h
bopwire/src/network/: manager.cpp  manager.h  rats_link.cpp  rats_link.h  upnp.cpp  upnp.h
bopwire/src/storage/: database.h
bopwire/src/store/: library_store.cpp  library_store.h
bopwire/src/sync/: block_propagator.cpp  block_propagator.h
bopwire/src/tokens/: mint.h
bopwire/src/transport/: mc_rats_quic.cpp  mc_rats_quic.h
bopwire/src/util/: traffic.h
bopwire/tools/: library_smoke_cli.cpp  mini_node.cpp  node_main.cpp  node_tui.cpp  node_tui.h
bopwire/webplayer/: API.md  README.md
bopwire/webplayer/deploy/: Caddyfile  README.md  bopwire-web-gateway.service  build-gateway.sh  publish-frontend.sh
bopwire/webplayer/frontend/: app.js  config.js  dmca.html  index.html  styles.css  wasm-player.js
bopwire/webplayer/gateway/src/: main.cpp  rats_link.cpp  rats_link.h  streamer.cpp  streamer.h
bopwire_player/: README.md  ffigen.yaml  playback_smoke.out  pubspec.yaml  upload_smoke.out  win_player.err
bopwire_player/android/app/: build.gradle.kts
bopwire_player/android/app/src/main/cpp/: CMakeLists.txt  bopwire_android.c  chromaprint_jni.cpp
bopwire_player/docs/: offline_play_proof.md
bopwire_player/ios/Runner/: GeneratedPluginRegistrant.m
bopwire_player/lib/: main.dart
bopwire_player/linux/: CMakeLists.txt
bopwire_player/linux/runner/: my_application.cc
bopwire_player/native/: CMakeLists.txt
bopwire_player/scripts/: build-android-apk.sh  build-linux-appimage.sh  build-linux-player.sh  build-windows-player.ps1
bopwire_player/test/: widget_test.dart
bopwire_player/tool/: account_creation_smoke.dart  e2e_streaming_smoke.dart  full_path_smoke.dart  handshake_smoke.dart  library_smoke.dart  mint_smoke.dart  no_node_smoke.dart  playback_smoke.dart  public_addr_smoke.dart  rats_smoke.dart  registration_smoke.dart  stun_observe_smoke.dart
bopwire_player/windows/: CMakeLists.txt
bopwire_player/windows/decoder/: CMakeLists.txt  mc_decoder.cpp
bopwire_player/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
bopwire_player/windows/runner/: Runner.rc  main.cpp
contracts/: mcCOIN.sol
docs/: base-bridge.md
musicchain/: ARCHITECTURE.md  CMakeLists.txt  SWARM_TRANSFER_V2.md  vcpkg.json
musicchain/config/: full-node.config.json
musicchain/docs/: BLOCKCHAIN_AND_NETWORK_INTERNALS.md
musicchain/include/: musicchain.h
musicchain/scripts/: _visible-linux-appimage.sh  _visible-linux-build.sh  _visible-linux-player-build.sh  _visible-vps-apt-and-rebuild.sh  _visible-vps-build-on-host.sh  _visible-vps-check-deps.sh  _visible-vps-deploy.sh  _visible-vps-full-node.sh  _visible-vps-install-deps.sh  _visible-vps-mini-node.sh  _visible-vps-push-libs.sh  build-mini-node-linux.sh  build-node-linux.sh  build-node-windows.ps1  deploy-vps.sh  install-deps-arch.sh  install-deps-debian.sh  wipe-and-run-home.ps1
musicchain/src/api/: device_attestation.h  jsonrpc_server.cpp  jsonrpc_server.h  rats_api.cpp  rats_api.h  server.cpp  server.h
musicchain/src/audio/: fingerprint.cpp  fingerprint.h  multi_decoder.cpp  multi_decoder.h
musicchain/src/capi/: capi.cpp
musicchain/src/consensus/: candidate.cpp  candidate.h  slashing.cpp  slashing.h
musicchain/src/core/: block.cpp  block.h  chain.cpp  chain.h  transaction.cpp  transaction.h
musicchain/src/crypto/: bip39.cpp  bip39.h  bip39_wordlist_en.h  ecies.cpp  ecies.h  hash.cpp  keccak256.h  keccak256_c.h  keys.cpp  keys.h  signature.cpp  wally_bip39.cpp
musicchain/src/moderation/: mod_action.h
musicchain/src/net/: load_monitor.h  relay_credit_tracker.cpp  relay_credit_tracker.h
musicchain/src/network/: manager.h  rats_link.cpp  rats_link.h
musicchain/src/storage/: database.cpp  database.h
musicchain/src/store/: library_store.cpp  library_store.h  swarm.cpp  swarm.h
musicchain/src/sync/: block_propagator.cpp  block_propagator.h  deep_audit.cpp  deep_audit.h  sync_manager.cpp  sync_manager.h
musicchain/src/tokens/: ledger.cpp  ledger.h  mint.cpp
musicchain/src/transport/: audio_fetch_handler.cpp
musicchain/src/util/: hw_fingerprint.cpp  hw_fingerprint.h
musicchain/tools/: mini_node.cpp  node_main.cpp  node_tui.cpp
musicchain_player/: ffigen.yaml
musicchain_player/lib/: main.dart
musicchain_player/lib/src/: smoke_test.dart
musicchain_player/linux/: CMakeLists.txt
musicchain_player/scripts/: build-android-apk.sh  build-linux-appimage.sh  build-linux-player.sh  build-windows-player.ps1
musicchain_player/windows/: CMakeLists.txt
musicchain_web/src/: audio_bridge.ts
scripts/: _common-windows.ps1  build-mini-node-linux.sh  build-node-linux.sh  build-node-windows.ps1  build-player-android.ps1  build-player-windows.ps1  install-mini-node-linux.sh  install-node-linux.sh
(+90 files in other folders)
